--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 *~
 *.lck
 _autosave-*
+./#auto_saved_files#
 *.tmp
 *-save.pro
 *-save.kicad_pcb
@@ -32,15 +33,14 @@ fp-info-cache
 
 ### KiCad Patch ###
 rescue-backup/
-
 *.tsv
 bom/
 
 # export folder and gerber files
 out/
+production/
 *.gbr*
 *.drl
-*.zip
 
 ### FreeCad ###
 *.pyc
