--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,19 @@ production/
 *.fcstd2
 *.FCStd2
 *.FCBak
+
+### macOS ###
+.DS_Store
+
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+
+# Folder config file
+[Dd]esktop.ini
+
+# Windows shortcuts
+*.lnk
